--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
             <div class="grid-container">
                 
                 <div class="grid-row">
-                    <div class="grid-cell" id="cell0">
-                    <div class="tile" id="tile0"></div>
-                    </div>
+                    <div class="grid-cell" id="cell0"><div class="tile" id="tile0"></div></div>
                     <div class="grid-cell" id="cell1"><div class="tile" id="tile1"></div></div>
                     <div class="grid-cell" id="cell2"><div class="tile" id="tile2"></div></div>
                     <div class="grid-cell" id="cell3"><div class="tile" id="tile3"></div></div>
