Mouse over word selection
Added the ability to select words using mousedown, mouseenter, and mouseup events.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <button class="btn" id="btn-new">Let's Play</button>
             <button class="btn" id="btn-stop">Stop!</button>
         </div>
-            <div class="grid-container">
+            <div class="grid-container unselectable">
                 
                 <div class="grid-row">
                     <div class="grid-cell" id="cell0"><div class="tile" id="tile0"></div></div>
