--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" rel="stylesheet" href="./src/CSS/style.css">
     <title>Boggle</title>
     <script  type="module" src="./src/js/index.js" defer></script>
